--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
   "homepage": "https://github.com/Alexk1208/Restaurant-Landing-Page#readme",
   "description": "",
   "devDependencies": {
+    "css-loader": "^6.2.0",
+    "style-loader": "^3.2.1",
     "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2"
-  },
-  "dependencies": {
-    "css-loader": "^6.2.0",
-    "style-loader": "^3.2.1"
   }
 }
